# memory-indexer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: indexer.rs
src/: base.rs  index.rs  lib.rs  ngram.rs  types.rs
src/pipeline/: derivers.rs  mod.rs  tokenizers.rs
src/search/: mod.rs  query.rs  scoring.rs
src/tokenizer/: dictionary.rs  mod.rs  normalize.rs  pinyin.rs  script.rs
